# elastic-miner

./: .travis.yml  CMakeLists.txt  ElasticPL.h  ElasticPLInterpreter.c  README.md  compile_dll.bat  curve25519-donna-c64.c  example.spl  miner.h  ocl.c  spl.c  spl.h  util.c  work_lib.c  xel_compiler.c  xel_miner.c
ElasticPL/: CMakeLists.txt  ElasticPL.c  ElasticPL.h  ElasticPLConvert.c  ElasticPLCrypto.c  ElasticPLFunctions.h  ElasticPLInterpreter.c  ElasticPLMath.c  ElasticPLParser - debug.c  ElasticPLParser.c  ElasticPLTokenManager.c  xel_compiler.c  xel_miner.c
crypto/: CMakeLists.txt  elasticpl_crypto.c  elasticpl_crypto.h  sha2.c  sha2.h  whirlpool.c
examples/: TSP_ATT48_BF.pl  TSP_ATT48_SA.pl
lib/: elasticpl_crypto.h  elasticpl_crypto.lib  readme.md
work/: README.md
